--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link rel="shortcut icon" href="ico/FORTENSE fav white.png">
+    <link rel="shortcut icon" href="ico/NEW FAVICON WB FORTENSE.png">
     <link rel="stylesheet" href="bootstrap5/css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap5/fa/css/all.min.css">
