ganti link info1

--- a/index.html
+++ b/index.html
@@ -74,14 +74,6 @@
           </ul>
           <!-- NAVTABS -->
 
-          <br>
-
-          <br>
-
-          <p class="mytitle1-muted">- - - - - - - - - - - - -</p>
-
-          <br>
-
           <div class="card m-2">
             <img src="img/WB FORTENSE - EKSTRA (3).jpg" class="card-img-top" alt="...">
             <div class="card-body">
@@ -438,7 +430,7 @@
                 <div class="accordion-body">
                   Seluruh sisa dana yang ada, sudah dikembalikan ke masing-masing dari kalian melalui bendahara kelas atau yang mewakili. Keputusan ini dilakukan sesuai voting 1 angkatan dan diskusi panitia dengan penuh pertimbangan. <br>
                   <br>
-                  <i class="fas fa-link me-2"></i>Baca selengkapnya : <a href="#" class="text-decoration-none"><strong>bit.ly/wbfortense-info</strong></a>
+                  <i class="fas fa-link me-2"></i>Baca selengkapnya : <a href="https://bit.ly/wbfortense-info" class="text-decoration-none"><strong>bit.ly/wbfortense-info</strong></a>
                 </div>
               </div>
             </div>
@@ -452,7 +444,7 @@
                 <div class="accordion-body">
                   Perlu kalian mengerti tentang sistem & struktur LOKA terlebih dahulu untuk memahami pasal keuangan. Semua akan terjawab dengan detail. <br>
                   <br>
-                  <i class="fas fa-link me-2"></i>Baca selengkapnya : <a href="#" class="text-decoration-none"><strong>bit.ly/wbfortense-info</strong></a>
+                  <i class="fas fa-link me-2"></i>Baca selengkapnya : <a href="https://bit.ly/wbfortense-info" class="text-decoration-none"><strong>bit.ly/wbfortense-info</strong></a>
                 </div>
               </div>
             </div>
@@ -466,7 +458,7 @@
                 <div class="accordion-body">
                   Perlu kalian mengerti tentang sistem & struktur LOKA terlebih dahulu untuk memahami pasal keuangan. Semua akan terjawab dengan detail. <br>
                   <br>
-                  <i class="fas fa-link me-2"></i>Baca selengkapnya : <a href="#" class="text-decoration-none"><strong>bit.ly/wbfortense-info</strong></a>
+                  <i class="fas fa-link me-2"></i>Baca selengkapnya : <a href="https://bit.ly/wbfortense-info" class="text-decoration-none"><strong>bit.ly/wbfortense-info</strong></a>
                 </div>
               </div>
             </div>
